# ch569-hal

./: .gitignore  Cargo.toml  README.md  flash.sh  link.x  memory.x
.cargo/: config.toml
ch569-pac/src/: lib.rs
examples/: blink.rs
src/: lib.rs  uart.rs
src/sys/: mod.rs
