[package]
name = "ch569-hal"
version = "0.0.1"
authors = [
    "Matt Thompson <matt@boondocker.io>"
]
edition = "2021"
description  = "HAL for CH569 microcontrollers"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/boondockenergy/ch569-hal.git"

keywords = [
    "embedded",
    "embedded-hal",
    "wch",
    "ch569",
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
ch569-pac = { path = "../ch569-pac", features = ["critical-section"] }
critical-section = { version = "1.1.1", features = ["restore-state-bool"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
riscv = "0.10"
riscv-rt = "0.11"
